kubernetes-service-sample.yaml
# Penulisan nama service menggunakan huruf kecil
# Penulisan protocol menggunakan huruf kapital

kind: Service
apiVersion: v1
metadata:
  name: TENTUKAN_NAMA_SERVICE
  namespace: TENTUKAN_NAMESPACE
spec:
  ports:
    - name: TENTUKAN_NAMA_PORT
      protocol: TENTUKAN_PROTOCOL
      port: TENTUKAN_PORT
      targetPort: TENTUKAN_PORT
  clusterIP: TENTUKAN_IP_POD
